2007-03-06  Atsushi Enomoto  <atsushi@ximian.com>

	* StringTest.cs : revert r73699 which does not make sense.

2007-02-25  Gert Driesen  <drieseng@users.sourceforge.net>

	* AppDomainSetupTest.cs: Added tests for bug #80934.
	* AppDomainTest.cs: Added tests for bug #80934.

2007-01-25  Atsushi Enomoto  <atsushi@ximian.com>

	* DateTimeTest.cs : test for copying Kind property.

2007-01-14  Jensen Somers <jensen.somers@gmail.com>

    * ArraySegmentTest.cs: Add a test case for the ArraySegment.Equals
    functionality.

2006-12-30  Alp Toker  <alp@atoker.com>

	* MathTest.cs: Add test case for new (2.0) Decimal.Ceiling.
	Based on feedback on #80384.

2006-12-22  Sebastien Pouliot  <sebastien@ximian.com> 

	* DateTimeTest.cs: Add test cases for new (2.0) [To|From]Binary
	* VersionTest.cs: Add test cases for new (2.0) Major|MinorRevision
	properties and for other untested (uncovered) stuff.

2006-12-22  Robert Jordan <robertj@gmx.net>

	* ArrayTest.cs: Add tests for bug #80299.

2006-12-16  Raja R Harinath  <rharinath@novell.com>

	* TypeTest.cs (TestNestedTypes): New test inspired by #80242.

2006-12-01  Gert Driesen  <drieseng@users.sourceforge.net>

	* DateTimeTest.cs: Added test for bug #80094. Remoted trailing tabs.

2006-11-26  Miguel de Icaza  <miguel@novell.com>

	* DecimalTest.cs: Add new tests for TryParse.

2006-11-13  Atsushi Enomoto  <atsushi@ximian.com>

	* StringTest.cs : added test for IndexOf(string,StringComparison).

2006-11-07  Dick Porter  <dick@ximian.com>

	* DateTimeTest.cs: TestToString(): Must specify '+0' for GMT.

	* TimeZoneTest.cs: Daylight saving ends at 2am in GMT.  (This test
	fails on MS, they return "01/01/0001 00:00:00")

2006-10-22  Zoltan Varga  <vargaz@gmail.com>

	* AppDomainTest.cs: Disable the not yet working #79720 test.

2006-10-22  Gert Driesen  <drieseng@users.sourceforge.net>

	* AppDomainTest.cs: Modified test for bug #79720 to also check the
	number of loaded assemblies. Added additional test for bug #79720 to