@@ -1,3 +1,7 @@
+2007-03-06  Zoltan Varga  <vargaz@gmail.com>
+
+	* TypeTest.cs: Add a regression test for #81037.
+
 2007-03-06  Atsushi Enomoto  <atsushi@ximian.com>
 
 	* StringTest.cs : revert r73699 which does not make sense.
